# am-i-shipping

./: .gitignore  CLAUDE.md  CONSTITUTION.md  CONSTITUTION.mini.md  README.md  USER.md  accuracy.md  concept.md  config.yaml.example  config_loader.py  deliverables-data-collection.md  epic-data-collection.md  health_check.py  health_writer.py  idealized-workflow.md  init_db.py  pyproject.toml  requirements.txt  run_collectors.ps1  run_collectors.sh  setup.md  velocity.md
am_i_shipping/: __init__.py  config_loader.py  db.py  health_check.py  health_writer.py  logging_config.py
collector/: __init__.py  reprompt.py  session_parser.py  store.py
docs/: CONSTITUTION.research.md  github-api-rate-limits.md
scripts/: find_two_issue_session.py  install-cron.sh  install-launchd.sh  install-task.ps1  run_two_units.py  uninstall-cron.sh  uninstall-launchd.sh  uninstall-task.ps1
synthesis/: __init__.py  calibration.py  cli.py  correction.py  coverage.py  cross_unit.py  expectations.py  fake_client.py  gap_analysis.py  graph_builder.py  llm_adapter.py  metrics.py  output_writer.py  prepare.py  rebuild.py  revision_detector.py  summarize.py  unit_identifier.py  unit_timeline.py  weekly.py
tests/: conftest.py  test_appswitch_export.py  test_backfill_session_timestamps.py  test_calibration.py  test_component_backfill_pr_link.py  test_config_loader.py  test_correction.py  test_coverage.py  test_cross_unit.py  test_cursor.py  test_e2e.py  test_e2e_github_poller.py  test_expectations.py  test_fetch.py  test_fetch_commits.py  test_fetch_timeline.py  test_gap_analysis.py  test_modes.py  (+32 more)
(+39 files in other folders)
