[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "am-i-shipping"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[project.scripts]
am-init-db = "am_i_shipping.db:main"
am-health-check = "am_i_shipping.health_check:main"
am-session-parser = "collector.session_parser:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["am_i_shipping*", "collector*"]
