[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "am-i-shipping"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    # Epic #17 — Phase 2 weekly synthesis engine calls the Anthropic API.
    # Gated by the synthesis: section of config.yaml; absence of the key is
    # tolerated until Sub-Issue 6 activates the live-run check.
    "anthropic>=0.40",
]

[project.scripts]
am-init-db = "am_i_shipping.db:main"
am-health-check = "am_i_shipping.health_check:main"
am-session-parser = "collector.session_parser:main"
am-github-poller = "collector.github_poller.run:main"
am-appswitch-export = "collector.appswitch.export:main"
am-synthesize = "synthesis.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["am_i_shipping*", "collector*", "synthesis*"]
